--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dompurify": "^2.4.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^6.8.4"
+    "jsdom": "^21.0.0",
+    "marked": "^4.2.12",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.8.4",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
